# parcagpu

./: .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  Dockerfile.cuda-headers  Dockerfile.gotracer  Dockerfile.test  Dockerfile.test_mock  Dockerfile.ubuntu2204  Dockerfile.usdt_tracer  Makefile  README.md  README_MOCK.md  README_TEST.md  README_USDT.md  bpft_test.sh  build-glibc-2.35.sh  build.zig  container_test.sh  go.mod  kernel_names.txt  mock_cudart.c  parcagpu.bt  simple_cupti.bt  test.sh  test_cupti_prof.cu  test_mock.c  test_probe.bt  test_usdt.sh  trace_kernel_launch.bpf.c
.github/workflows/: build.yml  container.yml
cupti/: CMakeLists.txt  correlation_filter.cpp  correlation_filter.h  cupti-prof.c  toolchain-arm64.cmake
ebpf/: cupti_bpf.h
gotracer/: go.mod  go.sum  main.go  probe_strace.out
gotracer/util/: trace.go
microbenchmarks/: pc_sample_toy.cu  rapid_launch.cu
src/: correlation_filter.cpp  correlation_filter.h  cupti.cpp  env_config.cpp  env_config.h  lib.rs  nvtx.h  nvtx_collector.cpp  nvtx_collector.h  parcagpu_cupti.cpp  parcagpu_pc_sampling.cpp  parcagpu_pc_sampling.h  pc_sampling.cpp  pc_sampling.h  probes.d  stall_reason_map.h  token_bucket.h
test/: CMakeLists.txt  README.md  graph-repro-real.sh  graph_repro.cu  mock_cuda.c  mock_cupti.c  pc_sample_toy.cubin  test-pc-mock-graph.sh  test-pc-mock.sh  test-pc-real.sh  test_cupti_prof.c  test_nvtx.c
test/bpf/: activity_parser.bpf.c  cupti_activity_bpf.h  go.mod  go.sum  main.go  usdt_compat.h
usdt_tracer/: go.mod  main.go
usdt_tracer/util/: trace.go
