[package]
name = "parcagpu"
version = "0.1.0"
edition = "2024"

[dependencies]
blocking = "1.6.1"
futures = "0.3.31"
libc = "0.2.172"
# dtrace-probe = "0.2"
rand = "0.9.1"
# libc = "0.2.172"
redhook = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
smol = "2.0.2"
probe = "0.2"

[lib]
crate-type = ["dylib"]

[profile.release]
debug = true
